feat: changes to match sample-web-ui
